Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-7434

XtraDB does not build on Solaris

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/sol10-64/builds/3412/steps/compile/logs/stdio

      /export/home/buildbot/maria-slave/solaris10-x86/build/mariadb-5.5.42/storage/xtradb/include/log0log.ic:496: error: invalid conversion from `ib_uint64_t*' to `volatile uint64_t*'
      /export/home/buildbot/maria-slave/solaris10-x86/build/mariadb-5.5.42/storage/xtradb/include/log0log.ic:496: error:   initializing argument 1 of `uint64_t atomic_add_64_nv(volatile uint64_t*, int64_t)'
      /usr/local/bin/cmake -E cmake_progress_report /export/home/buildbot/maria-slave/solaris10-x86/build/mariadb-5.5.42/CMakeFiles 
      gmake[2]: *** [storage/xtradb/CMakeFiles/xtradb.dir/handler/handler0alter.cc.o] Error 1
      gmake[2]: *** Waiting for unfinished jobs....

      Apparently it started happening after 5.5.39 XtraDB merge.

      Possibly 10.0 is affected, but it doesn't reach this point, the build fails earlier on groonga.

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 20m
                  20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.