MDEV-7434 XtraDB does not build on Solaris